# Diffusion-MI

./: .gitignore  README.MD  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
src/benchmark/self-consistency/: self_consistency_ae_benchmark.py
src/benchmark/stair/: stair_benchmark.py
src/dmi/: __init__.py  estimators.py
src/estimators/neural/: CPC.py  DIME.py  DOE.py  MINDE.py  MINE.py  MMG.py  NWJ.py  SMILE.py  TrainerFactory.py  __init__.py  test.py
src/estimators/neural/libs/: SDE.py
tests/: test_all_estimators_bmi.py  test_mind_estimator_bmi.py
